# skill-search

./: .gitignore  README.md  analytics.py  failed_jobs.txt  filter_search.py  gurgaon.txt  job_parser.py  jobs.csv  jobs.txt  login.py  main.ipynb  main.py  neo.ipynb  packages.txt  pandasai.ipynb  parser.ipynb  parser.py  pyproject.toml  scraper.py  streamlit.py  structured_jobs_data.csv  structured_parsers.py  url_input.py  visualizations.py
