[project]
name = "skill-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandasai",
    "pandasai-litellm>=0.0.1",
]

[tool.uv.sources]
pandasai = { path = "dist/pandasai-3.0.0b16-py3-none-any.whl" }
