[project]
name = "skill-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.27",
    "ipykernel>=6.29.5",
    "networkx>=3.5",
    "pandasai>=3.0.0b16",
    "pandasai-litellm>=0.0.1",
    "plotly>=6.2.0",
    "pyvis>=0.3.2",
    "selenium>=4.34.2",
    "streamlit>=1.47.0",
    "webdriver-manager>=4.0.2",
]
